# bililive-pigeon-tauri

./: .gitignore  README.md  UPDATELOG.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: brew.yml  main.yml  updater.yml
public/: side.html
scripts/: brew.mjs  publish.mjs  updatelog.mjs  updater.mjs
src/: App.svelte  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  emoji.json  tauri.conf.json
src-tauri/src/: command.rs  danmaku.rs  fs.rs  lib.rs  main.rs  packet.rs  plugin.rs  request.rs  txt.rs
src-tauri/src/db/: emoji.rs  gift.rs  history.rs  mod.rs  plugin.rs  setting.rs
src/@types/: color.d.ts  date-picker.d.ts  db.d.ts  grab.d.ts  tab.d.ts
src/components/: ColorPicker.svelte  ColorSelect.svelte  Dialog.svelte  Empty.svelte  Grab.svelte  Input.svelte  Popover.svelte  ScrollPicker.svelte  Select.svelte  Slider.svelte  Switch.svelte  Table.svelte  TimePicker.svelte
src/components/ColorPicker/: Alpha.svelte  ColorPicker.svelte  Hue.svelte  Sv.svelte  color.ts
src/components/DatePicker/: ChevronHeader.svelte  DatePicker.svelte  TableDate.svelte  TableMonth.svelte  TableYear.svelte  index.ts
src/components/Tabs/: Tab.svelte  Tabs.svelte
src/components/Template/: Grab.svelte
src/icons/: ArchiveBoxXMark.svelte  ArrowDown.svelte  ArrowSmallDown.svelte  ChevronDoubleLeft.svelte  ChevronDoubleRight.svelte  ChevronLeft.svelte  Eye.svelte  Swatch.svelte  XCircle.svelte
src/lib/: Danmaku.svelte  Gift.svelte  Greet.svelte  Plugin.svelte  Setting.svelte  Test.svelte  Toogle.svelte
src/lib/Tabs/: Tab.svelte  Tabs.svelte
src/lib/components/: CookieHelper.svelte  GiftCard.svelte  RoomInput.svelte  RoomSelect.svelte
src/store/: account.ts  gift.ts  plugin.ts  room.ts
src/utils/: danmaku.ts  plugin.ts  portal.ts  ripple.ts  roomId.ts  toast.ts  utils.ts
src/workers/: danmaku.ts
