[package]
name = "bililive-pigeon"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "macos-private-api"] }
url = "2.3.1"
tokio = { version = "1.21.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
futures-util = "0.3.24"
miniz_oxide = "0.6.2"
brotli = "3.3.4"
libloading = "0.7.3"
once_cell = "1.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
